<resources>
    <string name="app_name">PlayLIST</string>
    <string name="plus">+</string>
    <string name="or">OR</string>
    <string name="xor">XOR</string>
    <string name="and">AND</string>
    <string name="dots">. . .</string>
    <string name="add">add</string>
    <string name="create">Create</string>
    <string name="exit">Exit</string>
    <string name="playlist_name">Playlist name</string>
    <string name="string_login">Log in to account</string>
    <string name="string_sign">Sign in with Spotify</string>
    <string name="edit">Edit</string>
    <string name="load_to_spotify">Load to Spotify</string>
    <string name="delete">Delete</string>
</resources>