<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:gravity="end">
    <Button
            android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/edit"
            />
    <Button
            android:id="@+id/load_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/load_to_spotify"
            />
    <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/delete"
            />
</androidx.appcompat.widget.LinearLayoutCompat>