<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"

            app:cardElevation="4dp"
            app:cardCornerRadius="10dp">

        <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:padding="10dp"
                android:gravity="end"
                android:background="@color/green">

            <ImageView
                    android:id="@+id/keyboard"

                    android:layout_width="wrap_content"
                    android:layout_height="40dp"

                    android:src="@drawable/ic_baseline_keyboard_24" />

            <Button
                    android:id="@+id/edit_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_toEndOf="@id/keyboard"

                    android:backgroundTint="@color/green"
                    android:gravity="start"
                    android:text="@string/edit" />

            <ImageView
                    android:id="@+id/trash"

                    android:layout_width="wrap_content"
                    android:layout_height="40dp"

                    android:layout_below="@id/keyboard"
                    android:src="@drawable/ic_baseline_delete_24" />

            <Button
                    android:id="@+id/delete_button"

                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    style="?android:attr/borderlessButtonStyle"

                    android:layout_toEndOf="@id/trash"
                    android:layout_below="@id/edit_button"

                    android:backgroundTint="@color/green"
                    android:gravity="start"
                    android:text="@string/delete" />

            <ImageView
                    android:id="@+id/cloud"

                    android:layout_width="wrap_content"
                    android:layout_height="40dp"

                    android:src="@drawable/ic_baseline_cloud_upload_24"

                    android:layout_below="@id/trash" />

            <Button
                    android:id="@+id/load_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    style="?android:attr/borderlessButtonStyle"

                    android:layout_toEndOf="@id/cloud"
                    android:layout_below="@id/delete_button"

                    android:backgroundTint="@color/green"
                    android:gravity="start"
                    android:text="@string/load_to_spotify" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>